force-app/main/default/objects/Assign_Classes__c/Assign_Classes__c.object-meta.xml
<CustomObject>
    <label>Assign Class</label>
    <nameField>
        <label>Assign Classes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assign Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>