force-app/main/default/objects/Assign_Classes__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Assign Classes</relationshipLabel>
    <relationshipName>Assign_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>