force-app/main/default/objects/Assign_Classes__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Assign Classes</relationshipLabel>
    <relationshipName>Assign_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>