force-app/main/default/objects/Assign_Classes__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Assign Classes</relationshipLabel>
    <relationshipName>Assign_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>