force-app/main/default/objects/Assign_Classes__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Assign Classes</relationshipLabel>
    <relationshipName>Assign_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>