force-app/main/default/objects/Assign_Classes__c/fields/TimeTable__c.field-meta.xml
<CustomField>
    <fullName>TimeTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeTable</label>
    <referenceTo>TimeTable__c</referenceTo>
    <relationshipLabel>Assign Classes</relationshipLabel>
    <relationshipName>Assign_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>