force-app/main/default/objects/Assign_Classes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Subject__c</columns>
    <columns>Teacher__c</columns>
    <columns>TimeTable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>